--- a/DEBIAN/changelog
+++ b/DEBIAN/changelog
@@ -3,3 +3,9 @@ codeine (6.0a) unstable; urgency=low
 * Новая структура
 
 -- Dmitry Bergstein <dmitry.bergstein@gmail.com>
+
+codeine (6.0f) unstable; urgency=low
+
+* Множество изменений
+
+-- Dmitry Bergstein <dmitry.bergstein@gmail.com>
