Tons of unstable fixes

--- a/src/Assets/Control/Locale/ru/Panel.json
+++ b/src/Assets/Control/Locale/ru/Panel.json
@@ -7,9 +7,6 @@
         "Nginx":"Nginx",
         "IO":"Данные",
         "Security":"Безопасность",
-        "Review":"Отзывы",
-        "Log":"Журнал",
-        "Doctor":"Доктора",
-        "Hospital":"Больницы"
+        "Log":"Журнал"
     }
 }
