--- a/src/Assets/Security/Locale/ru/Control.json
+++ b/src/Assets/Security/Locale/ru/Control.json
@@ -1,6 +1,25 @@
 {
-    "Hash":
+    "Security":
     {
-        "Test": "Тест хэширования"
+        "Hash":
+        {
+            "Test": "Тест хэширования"
+        },
+        "Cipher":
+        {
+            "Test": "Тест шифрования"
+        },
+        "Entropy":
+        {
+            "Test": "Тест ГСЧ"
+        },
+        "Access":
+        {
+            "Rule":
+            {
+                "List": "Правила",
+                "Decision": ["Запретить", "Разрешить"]
+            }
+        }
     }
 }
