New control panel type. Various fixes

--- a/src/Assets/Control/Locale/ru/Panel.json
+++ b/src/Assets/Control/Locale/ru/Panel.json
@@ -1,6 +1,8 @@
 {
     "Control":
     {
+        "Project": "Проект",
+        "Platform": "Платформа",
         "Main": "Обзор",
         "Codeine": "Ядро",
         "PHP":"PHP",
