--- a/src/Assets/Code/Documentation/Locale/ru/ByContract.json
+++ b/src/Assets/Code/Documentation/Locale/ru/ByContract.json
@@ -16,6 +16,10 @@
             {
                 "String": "Строковое",
                 "Hexadecimal": "Шестнадцатеричное"
+            },
+            "Array":
+            {
+                "Associative": "Ассоциативный массив"
             }
         }
     }
