--- a/src/Assets/Security/Locale/ru/Control.json
+++ b/src/Assets/Security/Locale/ru/Control.json
@@ -13,6 +13,10 @@
         {
             "Test": "Тест ГСЧ"
         },
+        "UID":
+        {
+            "Test": "Тест UID"
+        },
         "Access":
         {
             "Rule":
