--- a/src/Assets/Control/Locale/ru/Panel.json
+++ b/src/Assets/Control/Locale/ru/Panel.json
@@ -4,6 +4,7 @@
         "Project": "Проект",
         "Platform": "Платформа",
         "Main": "Обзор",
+        "User": "Пользователи",
         "Codeine": "Ядро",
         "PHP":"PHP",
         "Nginx":"Nginx",
