Новый локализатор, с более логичной схемой размещения переводов и высокой скоростью обработки.

--- a/src/Assets/Security/Locale/ru/Control.json
+++ b/src/Assets/Security/Locale/ru/Control.json
@@ -1,29 +1,8 @@
 {
-    "Security":
+    "Title": "Безопасность",
+    "Options":
     {
-        "Hash":
-        {
-            "Test": "Тест хэширования"
-        },
-        "Cipher":
-        {
-            "Test": "Тест шифрования"
-        },
-        "Entropy":
-        {
-            "Test": "Тест ГСЧ"
-        },
-        "UID":
-        {
-            "Test": "Тест UID"
-        },
-        "Access":
-        {
-            "Rule":
-            {
-                "List": "Правила",
-                "Decision": ["Запретить", "Разрешить"]
-            }
-        }
+        "HashTest": "Тест хэширования",
+        "EntropyTest": "Тест ГСЧ"
     }
 }
