Улучшенный центр управления.

--- a/src/Assets/PHP/Locale/ru/Control.json
+++ b/src/Assets/PHP/Locale/ru/Control.json
@@ -1,8 +1,13 @@
 {
-    "PHP":
+    "Title": "PHP",
+    "Options":
     {
         "Version": "Версии",
         "Settings": "Настройки",
         "XCache": "Кэш"
+    },
+    "Extension":
+    {
+        "Core": "Ядро"
     }
 }
