--- a/src/Assets/Session/Locale/ru/Control.json
+++ b/src/Assets/Session/Locale/ru/Control.json
@@ -1,5 +1,8 @@
 {
     "Title": "Сессии",
     "Actions": "Действия",
-    "Annulate": "Аннулировать"
+    "Annulate": "Аннулировать",
+    "Options": {
+        "Flush": "Очистить"
+    }
 }
