--- a/src/Assets/PHP/Locale/ru/Control.json
+++ b/src/Assets/PHP/Locale/ru/Control.json
@@ -1,16 +1,25 @@
 {
     "Title": "PHP",
-    "Version": "Версии",
-    "Settings": "Настройки",
-    "XCache": "Кэш",
-    "PHP:Control": {
-        "Extension": {
-            "Core": "Ядро"
-        },
-        "Ini": {
-            "date": {
-                "timezone": "Временная зона"
-            }
+    "Options":
+    {
+        "Extensions": "Расширения",
+        "Settings": "Настройки",
+        "XCache": "Кэш"
+    },
+    "Extension": {
+        "Core": "Ядро"
+    },
+    "Ini": {
+        "date": {
+            "timezone": "Временная зона"
+        }
+    },
+    "Version": {
+        "Verdict": {
+            "Stable": "Стабильная версия",
+            "Unstable": "Нестабильная версия",
+            "Outdated": "Устаревшая версия",
+            "Untested": "Не проверялась"
         }
     }
 }
