--- a/src/Assets/Control/Locale/ru/Panel.json
+++ b/src/Assets/Control/Locale/ru/Panel.json
@@ -1,7 +1,9 @@
 {
+    "Title": "Центр Управления",
     "Group":
     {
         "Project": "Проект",
         "Platform": "Платформа"
-    }
+    },
+    "Return": "Вернуться к сайту"
 }
