--- a/src/Assets/Article/Locale/ru/Control.json
+++ b/src/Assets/Article/Locale/ru/Control.json
@@ -1,7 +1,7 @@
 {
     "Title": "Статьи",
     "Options": {
-        "Create": "Создать",
-        "Order": "Заказать"
+        "Create": "Создать статью",
+        "Order": "Заказать статью"
     }
 }
