--- a/src/Assets/User/Locale/ru/Control.json
+++ b/src/Assets/User/Locale/ru/Control.json
@@ -1,3 +1,8 @@
 {
-    "Title": "Пользователи"
+    "Title": "Пользователи",
+    "Options":
+    {
+        "Do": "Список",
+        "Create": "Создать"
+    }
 }
