Page Priority Page menu Bugfixes Treekey parser

--- a/src/Assets/Page/Locale/ru/Entity.json
+++ b/src/Assets/Page/Locale/ru/Entity.json
@@ -3,5 +3,7 @@
     "Keywords": "Ключевые слова",
     "Description": "Описание",
     "Body": "Контент",
-    "Slug": "ЧПУ"
+    "Slug": "ЧПУ",
+    "Menu": "Отображать в меню",
+    "Priority": "Приоритет"
 }
