--- a/src/Assets/Article/Locale/ru/Control.json
+++ b/src/Assets/Article/Locale/ru/Control.json
@@ -1,5 +1,7 @@
 {
     "Title": "Статьи",
+    "Update": "Редактировать",
+    "Delete": "Удалить",
     "Options": {
         "Create": "Создать статью",
         "Order": "Заказать статью"
