Bugfxes and substitute support

--- a/src/Assets/User/Locale/ru/Control.json
+++ b/src/Assets/User/Locale/ru/Control.json
@@ -4,5 +4,9 @@
     {
         "Do": "Список",
         "Create": "Создать"
-    }
+    },
+    "Update": "Изменить",
+    "Delete": "Удалить",
+    "Show": "Просмотреть",
+    "Login": "Войти"
 }
