--- a/src/Assets/Article/Locale/ru/Entity.json
+++ b/src/Assets/Article/Locale/ru/Entity.json
@@ -4,5 +4,6 @@
     "Create": "Создать статью",
     "Slug": "ЧПУ",
     "Keywords": "Ключевые слова",
-    "Description": "Описание"
+    "Description": "Описание",
+    "Empty": "Статей нет"
 }
