--- a/src/Assets/Blog/Locale/ru/Entity.json
+++ b/src/Assets/Blog/Locale/ru/Entity.json
@@ -4,5 +4,6 @@
     "Description": "Описание",
     "Body": "Текст",
     "Slug": "ЧПУ",
-    "Published": "Опубликовать"
+    "Published": "Опубликовать",
+    "Empty": "Блог пуст"
 }
