--- a/src/Assets/Page/Locale/ru/Entity.json
+++ b/src/Assets/Page/Locale/ru/Entity.json
@@ -5,5 +5,6 @@
     "Body": "Контент",
     "Slug": "ЧПУ",
     "Menu": "Отображать в меню",
-    "Priority": "Приоритет"
+    "Priority": "Приоритет",
+    "Redirect": "Редирект"
 }
