--- a/src/Assets/Blog/Locale/ru/Entity.json
+++ b/src/Assets/Blog/Locale/ru/Entity.json
@@ -5,5 +5,6 @@
     "Body": "Текст",
     "Slug": "ЧПУ",
     "Published": "Опубликовать",
-    "Empty": "Блог пуст"
+    "Empty": "Блог пуст",
+    "Redirect": "Редирект"
 }
