--- a/src/Assets/Page/Locale/ru/Entity.json
+++ b/src/Assets/Page/Locale/ru/Entity.json
@@ -6,5 +6,6 @@
     "Slug": "ЧПУ",
     "Menu": "Отображать в меню",
     "Priority": "Приоритет",
-    "Redirect": "Редирект"
+    "Redirect": "Редирект",
+    "Empty": "Страниц нет"
 }
