--- a/src/Assets/User/Locale/ru/Entity.json
+++ b/src/Assets/User/Locale/ru/Entity.json
@@ -5,5 +5,6 @@
     "Password": "Пароль",
     "Nickname": "Никнейм",
     "Fullname": "Имя",
-    "Photo": "Фото"
+    "Photo": "Фото",
+    "Invite": "Инвайт"
 }
