--- a/src/Assets/User/Locale/ru/Error.json
+++ b/src/Assets/User/Locale/ru/Error.json
@@ -10,5 +10,9 @@
     "Password":
     {
         "Required":"Пароль обязателен"
+    },
+    "Invite":
+    {
+        "NonExist": "Несуществующий инвайт"
     }
 }
