--- a/src/Assets/Block/Locale/ru/Entity.json
+++ b/src/Assets/Block/Locale/ru/Entity.json
@@ -1,5 +1,6 @@
 {
     "ID":"ID блока",
     "Title": "Название",
-    "Body": "Контент"
+    "Body": "Контент",
+    "Empty": "Блоки не определены"
 }
