Render fixes, truncate, and UA security

--- a/src/Assets/Session/Locale/ru/Control.json
+++ b/src/Assets/Session/Locale/ru/Control.json
@@ -3,6 +3,6 @@
     "Actions": "Действия",
     "Annulate": "Аннулировать",
     "Options": {
-        "Flush": "Очистить"
+        "Truncate": "Очистить"
     }
 }
