--- a/src/Assets/User/Locale/ru/Entity.json
+++ b/src/Assets/User/Locale/ru/Entity.json
@@ -6,5 +6,6 @@
     "Nickname": "Никнейм",
     "Fullname": "Имя",
     "Photo": "Фото",
-    "Invite": "Инвайт"
+    "Invite": "Инвайт",
+    "Empty": "Пользователей нет"
 }
