--- a/src/Assets/Article/Locale/ru/Control.json
+++ b/src/Assets/Article/Locale/ru/Control.json
@@ -1,9 +1,10 @@
 {
     "Title": "Статьи",
-    "Update": "Редактировать",
-    "Delete": "Удалить",
-    "Options": {
+    "Options":
+    {
         "Create": "Создать статью",
-        "Order": "Заказать статью"
+        "Order": "Заказать статью",
+        "Update": "Редактировать",
+        "Delete": "Удалить"
     }
 }
