--- a/src/Assets/Message/Locale/ru/Entity.json
+++ b/src/Assets/Message/Locale/ru/Entity.json
@@ -2,5 +2,10 @@
     "To": "Кому",
     "Subject": "Тема",
     "Body": "Сообщение",
-    "Empty": "Сообщений нет"
+    "Empty": "Сообщений нет",
+    "Folder":
+    {
+        "Inbox": "Входящие",
+        "Outbox": "Исходящие"
+    }
 }
