--- a/src/Assets/User/Locale/ru/Entity.json
+++ b/src/Assets/User/Locale/ru/Entity.json
@@ -7,5 +7,13 @@
     "Fullname": "Имя",
     "Photo": "Фото",
     "Invite": "Инвайт",
-    "Empty": "Пользователей нет"
+    "Empty": "Пользователей нет",
+    "Created": "Зарегистрировался",
+    "Status":
+    {
+        "Label": "Статус",
+        "0": "Неактивирован",
+        "1": "Активирован",
+        "-1": "Бан"
+    }
 }
