--- a/src/Assets/PHP/Locale/ru/Control.json
+++ b/src/Assets/PHP/Locale/ru/Control.json
@@ -3,8 +3,7 @@
     "Options":
     {
         "Extensions": "Расширения",
-        "Settings": "Настройки",
-        "XCache": "Кэш"
+        "Settings": "Настройки"
     },
     "Extension": {
         "Core": "Ядро"
