--- a/src/Assets/Article/Locale/ru/Control.json
+++ b/src/Assets/Article/Locale/ru/Control.json
@@ -2,6 +2,7 @@
     "Title": "Статьи",
     "Options":
     {
+        "Do": "Список статей",
         "Create": "Создать статью",
         "Order": "Заказать статью",
         "Update": "Редактировать",
