Benchmarks, mongo upsert, fixes.

--- a/src/Assets/PHP/Locale/ru/Control.json
+++ b/src/Assets/PHP/Locale/ru/Control.json
@@ -3,7 +3,8 @@
     "Options":
     {
         "Extensions": "Расширения",
-        "Settings": "Настройки"
+        "Settings": "Настройки",
+        "Do": "Дашборд"
     },
     "Extension": {
         "Core": "Ядро"
