--- a/src/Assets/Server/Locale/ru/Control.json
+++ b/src/Assets/Server/Locale/ru/Control.json
@@ -2,6 +2,9 @@
     "Title": "Сервер",
     "Options":
     {
+        "Do": "Дашборд",
         "Benchmark": "Бенчмарк"
-    }
+    },
+    "System": "Система",
+    "CPU": "Процессоры"
 }
