--- a/src/Assets/Session/Locale/ru/Control.json
+++ b/src/Assets/Session/Locale/ru/Control.json
@@ -2,7 +2,10 @@
     "Title": "Сессии",
     "Actions": "Действия",
     "Annulate": "Аннулировать",
-    "Options": {
-        "Truncate": "Очистить"
+    "Options":
+    {
+        "Do": "Список сессий",
+        "Delete": "Удалить",
+        "Truncate": "Очистить устаревшие"
     }
 }
