--- a/src/Assets/Session/Locale/ru/Entity.json
+++ b/src/Assets/Session/Locale/ru/Entity.json
@@ -3,10 +3,7 @@
     "Created": "Создана",
     "User": "Пользователь",
     "Expire": "Срок действия",
-    "IP":
-    {
-        "Start": "Первый IP",
-        "Current": "Последний IP"
-    },
-    "Heartbeat": "Активность"
+    "IP": "IP",
+    "Heartbeat": "Активность",
+    "Empty": "Сессий нет"
 }
