--- a/src/Assets/User/Locale/ru/Entity.json
+++ b/src/Assets/User/Locale/ru/Entity.json
@@ -5,6 +5,7 @@
     "Password": "Пароль",
     "Nickname": "Никнейм",
     "Fullname": "Имя",
+    "Biography": "Биография",
     "Photo": "Фото",
     "Invite": "Инвайт",
     "Empty": "Пользователей нет",
