--- a/src/Assets/Article/Locale/ru/Control.json
+++ b/src/Assets/Article/Locale/ru/Control.json
@@ -5,6 +5,7 @@
         "Do": "Список статей",
         "Create": "Создать статью",
         "Order": "Заказать статью",
+        "Show": "Просмотреть",
         "Update": "Редактировать",
         "Delete": "Удалить"
     }
