--- a/src/Assets/Block/Locale/ru/Control.json
+++ b/src/Assets/Block/Locale/ru/Control.json
@@ -3,6 +3,9 @@
     "Options":
     {
         "Do": "Список блоков",
-        "Create": "Создать блок"
+        "Create": "Создать блок",
+        "Show": "Просмотреть",
+        "Update": "Редактировать",
+        "Delete": "Удалить"
     }
 }
