--- a/src/Assets/Page/Locale/ru/Control.json
+++ b/src/Assets/Page/Locale/ru/Control.json
@@ -3,6 +3,9 @@
     "Options":
     {
         "Do": "Список",
-        "Create": "Создать страницу"
+        "Create": "Создать страницу",
+        "Show": "Просмотреть",
+        "Update": "Редактировать",
+        "Delete": "Удалить"
     }
 }
