--- a/src/Assets/SEO/Locale/ru/Control.json
+++ b/src/Assets/SEO/Locale/ru/Control.json
@@ -3,6 +3,6 @@
     "Options": {
         "Do": "Обзор",
         "Robots": "Robots",
-        "Sitemaps": "Карты сайта"
+        "Sitemaps": "Карта сайта"
     }
 }
