Возрастные рейтинги. closes #1252

--- a/src/Assets/User/Locale/ru/Entity.json
+++ b/src/Assets/User/Locale/ru/Entity.json
@@ -7,6 +7,8 @@
     "Fullname": "Имя",
     "Biography": "Биография",
     "Photo": "Фото",
+    "DOB": "День рождения",
+    "Age": "Возраст",
     "Invite": "Инвайт",
     "Empty": "Пользователей нет",
     "Created": "Зарегистрировался",
