Bugfixes. VK Support.

--- a/src/Assets/User/Locale/ru/Entity.json
+++ b/src/Assets/User/Locale/ru/Entity.json
@@ -8,6 +8,8 @@
     "Biography": "Биография",
     "Photo": "Фото",
     "DOB": "День рождения",
+    "Country": "Страна",
+    "Location": "Местоположение",
     "Age": "Возраст",
     "Invite": "Инвайт",
     "Empty": "Пользователей нет",
