--- a/src/Assets/User/Locale/ru/Error.json
+++ b/src/Assets/User/Locale/ru/Error.json
@@ -5,14 +5,21 @@
     },
     "EMail":
     {
-        "Unique":"Почтовый ящик занят"
+        "Unique": "Почтовый ящик занят",
+        "Required": "EMail обязателен к заполнению"
     },
     "Password":
     {
-        "Required":"Пароль обязателен"
+        "Required":"Укажите пароль"
     },
     "Invite":
     {
         "NonExist": "Несуществующий инвайт"
+    },
+    "Surname": {
+        "Required": "Укажите фамилию"
+    },
+    "Name": {
+        "Required": "Укажите имя"
     }
 }
