--- a/src/Assets/Blog/Locale/ru/Entity.json
+++ b/src/Assets/Blog/Locale/ru/Entity.json
@@ -7,6 +7,6 @@
     "Slug": "ЧПУ",
     "Published": "Опубликовать",
     "Empty": "Блог пуст",
-    "Age": "Возрастное ограничение",
+    "AgeLimit": "Возрастное ограничение",
     "Redirect": "Редирект"
 }
