--- a/src/Assets/User/Locale/ru/Entity.json
+++ b/src/Assets/User/Locale/ru/Entity.json
@@ -20,5 +20,6 @@
         "0": "Неактивирован",
         "1": "Активирован",
         "-1": "Бан"
-    }
+    },
+    "Create": "Зарегистрироваться"
 }
