Article Application, hotfixes

--- a/src/Assets/Article/Locale/ru/Entity.json
+++ b/src/Assets/Article/Locale/ru/Entity.json
@@ -1,9 +1,10 @@
 {
     "Title":"Название",
-    "Text":"Текст",
+    "Body":"Текст",
     "Create": "Создать статью",
     "Slug": "ЧПУ",
     "Keywords": "Ключевые слова",
     "Description": "Описание",
+    "Category": "Рубрика",
     "Empty": "Статей нет"
 }
