--- a/src/Assets/User/Locale/ru/Passwd.json
+++ b/src/Assets/User/Locale/ru/Passwd.json
@@ -1,4 +1,7 @@
 {
+    "Title": "Смена пароля",
+    "OldPassword": "Старый пароль",
+    "NewPassword": "Новый пароль",
     "Error":
     {
         "OldPasswd":
