Bugfixes, modified core functions.

--- a/src/Assets/User/Locale/ru/Passwd.json
+++ b/src/Assets/User/Locale/ru/Passwd.json
@@ -2,12 +2,11 @@
     "Title": "Смена пароля",
     "OldPassword": "Старый пароль",
     "NewPassword": "Новый пароль",
-    "Error":
-    {
-        "OldPasswd":
-        {
+    "Error": {
+        "OldPasswd": {
             "Incorrect": "Неверно указан текущий пароль"
         }
     },
-    "Success": "Пароль успешно изменён"
+    "Success": "Пароль успешно изменён",
+    "Submit": "Сменить пароль"
 }
