--- a/src/Assets/User/Locale/ru/Control.json
+++ b/src/Assets/User/Locale/ru/Control.json
@@ -3,10 +3,10 @@
     "Options":
     {
         "Do": "Список",
-        "Create": "Создать"
-    },
-    "Update": "Изменить",
-    "Delete": "Удалить",
-    "Show": "Просмотреть",
-    "Login": "Войти"
+        "Create": "Создать",
+        "Update": "Изменить",
+        "Delete": "Удалить",
+        "Show": "Просмотреть",
+        "Login": "Войти"
+    }
 }
