--- a/src/Assets/User/Locale/ru/Control.json
+++ b/src/Assets/User/Locale/ru/Control.json
@@ -7,6 +7,7 @@
         "Update": "Изменить",
         "Delete": "Удалить",
         "Show": "Просмотреть",
-        "Login": "Войти"
+        "Login": "Войти",
+        "Passwd": "Сменить пароль"
     }
 }
