--- a/src/Assets/User/Locale/ru/Entity.json
+++ b/src/Assets/User/Locale/ru/Entity.json
@@ -7,6 +7,11 @@
     "Fullname": "Имя",
     "Biography": "Биография",
     "Photo": "Фото",
+    "Gender": {
+        "M": "Мужской",
+        "F": "Женский",
+        "Label": "Пол"
+    },
     "DOB": "День рождения",
     "Country": "Страна",
     "Location": "Местоположение",
