Fixes: Page, Checkbox

--- a/src/Assets/Page/Locale/ru/Entity.json
+++ b/src/Assets/Page/Locale/ru/Entity.json
@@ -1,11 +1,15 @@
 {
-    "Title": "Название",
-    "Keywords": "Ключевые слова",
-    "Description": "Описание",
     "Body": "Контент",
-    "Slug": "ЧПУ",
+    "Description": "Описание",
+    "Empty": "Страниц нет",
+    "Keywords": "Ключевые слова",
     "Menu": "Отображать в меню",
     "Priority": "Приоритет",
     "Redirect": "Редирект",
-    "Empty": "Страниц нет"
+    "SEO": {
+        "Description": "SEO: Описание",
+        "Keywords": "SEO: Ключевые слова"
+    },
+    "Slug": "ЧПУ",
+    "Title": "Название"
 }
