Many cosmetic fixes. Skel for new projects.

--- a/src/Assets/User/Locale/ru/Entity.json
+++ b/src/Assets/User/Locale/ru/Entity.json
@@ -1,5 +1,6 @@
 {
     "ID": "ID",
+    "Avatar": "Аватар",
     "EMail": "EMail",
     "Phone": "Телефон",
     "Password": "Пароль",
@@ -8,6 +9,7 @@
     "Biography": "Биография",
     "Photo": "Фото",
     "Gender": {
+        "U": "Не обозначен",
         "M": "Мужской",
         "F": "Женский",
         "Label": "Пол"
