--- a/src/Assets/Project/Locale/ru/Terms.json
+++ b/src/Assets/Project/Locale/ru/Terms.json
@@ -4,11 +4,13 @@
     {
         "Spam":
         {
-            "Title": "Запрещено распространение спама в комментариях и отзывах"
+            "Title": "Запрещено распространение спама в комментариях и отзывах",
+            "Description": ""
         },
         "Swear":
         {
-            "Title": "Запрещены оскорбления и мат"
+            "Title": "Запрещены оскорбления и мат",
+            "Description": ""
         }
     }
 }
