--- a/src/Assets/Complain/Locale/ru/Entity.json
+++ b/src/Assets/Complain/Locale/ru/Entity.json
@@ -1,6 +1,9 @@
 {
     "Created": "Создана",
     "Object": "Объект",
-    "Rule": "Что нарушено",
+    "Rule":
+    {
+        "Label": "Что нарушено"
+    },
     "User": "Автор"
 }
