--- a/src/Assets/Project/Locale/ru/Terms.json
+++ b/src/Assets/Project/Locale/ru/Terms.json
@@ -2,15 +2,7 @@
     "Title": "Правила сайта",
     "Rule":
     {
-        "Spam":
-        {
-            "Title": "Запрещено распространение спама в комментариях и отзывах",
-            "Description": ""
-        },
-        "Swear":
-        {
-            "Title": "Запрещены оскорбления и мат",
-            "Description": ""
-        }
+        "Spam": "Запрещено распространение спама в комментариях и отзывах",
+        "Swear": "Запрещены оскорбления и мат"
     }
 }
