--- a/src/Assets/Page/Locale/ru/Control.json
+++ b/src/Assets/Page/Locale/ru/Control.json
@@ -6,6 +6,8 @@
         "Create": "Создать страницу",
         "Show": "Просмотреть",
         "Update": "Редактировать",
-        "Delete": "Удалить"
+        "Delete": "Удалить",
+        "Import": "Импорт",
+        "Export": "Экспорт"
     }
 }
