--- a/src/Assets/User/Locale/ru/Control.json
+++ b/src/Assets/User/Locale/ru/Control.json
@@ -8,6 +8,7 @@
         "Delete": "Удалить",
         "Show": "Просмотреть",
         "Login": "Войти",
-        "Passwd": "Сменить пароль"
+        "Passwd": "Сменить пароль",
+        "RAW": "Просмотреть в сыром виде"
     }
 }
