--- a/src/Assets/Country/Locale/ru/Control.json
+++ b/src/Assets/Country/Locale/ru/Control.json
@@ -6,7 +6,7 @@
         "Show": "Просмотреть",
         "Update": "Редактировать",
         "Delete": "Удалить",
-        "Accept": "Одобрить",
-        "Reject": "Отклонить"
+        "Allow": "Одобрить",
+        "Disallow": "Отклонить"
     }
 }
