--- a/src/Assets/Blog/Locale/ru/Catalog.json
+++ b/src/Assets/Blog/Locale/ru/Catalog.json
@@ -1,7 +1,7 @@
 {
-    "Header":
-    {
+    "Header": {
         "Category": "Рубрики",
-        "User": "Авторы"
+        "User": "Авторы",
+        "Tags": "Теги"
     }
 }
