--- a/src/Assets/Blog/Locale/ru/Entity.json
+++ b/src/Assets/Blog/Locale/ru/Entity.json
@@ -1,12 +1,19 @@
 {
-    "Title": "Заголовок",
+    "AgeLimit": "Возрастное ограничение",
+    "Body": "Текст",
     "Category": "Рубрика",
     "Description": "Описание",
-    "Body": "Текст",
-    "Source": "Источник",
-    "Slug": "ЧПУ",
-    "Published": "Опубликовать",
     "Empty": "Блог пуст",
-    "AgeLimit": "Возрастное ограничение",
-    "Redirect": "Редирект"
+    "Published": "Опубликовать",
+    "Redirect": "Редирект",
+    "SEO": {
+        "Keywords": "Ключевые слова",
+        "Title": "SEO Заголовок",
+        "Description": "SEO Описание"
+    },
+    "Slug": "ЧПУ",
+    "Source": "Источник",
+    "Tag": "Тег",
+    "Tags": "Теги",
+    "Title": "Заголовок"
 }
