--- a/src/Assets/Control/Locale/ru/Panel.json
+++ b/src/Assets/Control/Locale/ru/Panel.json
@@ -1,10 +1,10 @@
 {
-    "Title": "Центр Управления",
-    "Group":
-    {
+    "Group": {
         "Project": "Проект",
         "Platform": "Платформа",
-        "Developer": "Разработчик"
+        "Developer": "Разработчик",
+        "Company": "Компания"
     },
-    "Return": "Вернуться к сайту"
+    "Return": "Вернуться к сайту",
+    "Title": "Центр Управления"
 }
