--- a/src/Assets/User/Locale/en/Entity.json
+++ b/src/Assets/User/Locale/en/Entity.json
@@ -2,7 +2,7 @@
     "Created": "Joined",
     "DOB": "Date of birth",
     "EMail": "EMail",
-    "Fullname": "Full name",
+    "Title": "Full name",
     "Gender": {
         "Label": "Gender",
         "U": "Unspecified",
