--- a/src/Assets/Company/Locale/ru/Entity.json
+++ b/src/Assets/Company/Locale/ru/Entity.json
@@ -1,6 +1,7 @@
 {
     "Company": {
         "Type": {
+            "Label": "Организационно-правовая форма",
             "IE": "Индивидуальный предприниматель",
             "LLC": "Общество с ограниченной ответственностью",
             "CJSC": "Закрытое акционерное общество",
@@ -47,9 +48,10 @@
         "Since": "Основана",
         "Label": "Юридическая информация"
     },
-    "Company.Type.Label": "Организационно-правовая форма",
     "EMail": "Электронная почта",
     "Mission": "Миссия",
+    "Tagline": "Одной строкой",
+    "Powerpoints": "Преимущества",
     "Phone": "Контактный телефон",
     "SEO": {
         "Description": "SEO Описание",
