--- a/src/Assets/Article/Locale/ru/Control.json
+++ b/src/Assets/Article/Locale/ru/Control.json
@@ -2,7 +2,8 @@
     "Title": "Статьи",
     "Options":
     {
-        "Do": "Список статей",
+        "Do": "Обзор",
+        "List": "Список статей",
         "Create": "Создать статью",
         "Order": "Заказать статью",
         "Show": "Просмотреть",
