--- a/src/Assets/Block/Locale/ru/Control.json
+++ b/src/Assets/Block/Locale/ru/Control.json
@@ -2,7 +2,8 @@
     "Title": "Блоки",
     "Options":
     {
-        "Do": "Список блоков",
+        "Do": "Обзор",
+        "List": "Список блоков",
         "Create": "Создать блок",
         "Show": "Просмотреть",
         "Update": "Редактировать",
