--- a/src/Assets/Blog/Locale/ru/Control.json
+++ b/src/Assets/Blog/Locale/ru/Control.json
@@ -2,10 +2,13 @@
     "Title": "Блог",
     "Options":
     {
-        "Do": "Список",
+        "Do": "Обзор",
+        "List": "Список постов",
         "Create": "Создать запись в блоге",
         "Show": "Просмотреть",
         "Update": "Редактировать",
         "Delete": "Удалить"
-    }
+    },
+    "Today": "Постов в блоге сегодня",
+    "Total": "Всего постов в блоге"
 }
