--- a/src/Assets/Comment/Locale/ru/Control.json
+++ b/src/Assets/Comment/Locale/ru/Control.json
@@ -2,7 +2,8 @@
     "Title": "Комментарии",
     "Options":
     {
-        "Do": "Список",
+        "Do": "Обзор",
+        "List": "Список комментариев",
         "Show": "Просмотреть",
         "Update": "Редактировать",
         "Delete": "Удалить",
