--- a/src/Assets/Complain/Locale/ru/Control.json
+++ b/src/Assets/Complain/Locale/ru/Control.json
@@ -1,7 +1,9 @@
 {
-    "Options": {
-        "Do": "Список жалоб"
+    "Options":
+    {
+        "Do": "Обзор",
+        "List": "Список жалоб"
+        "Create": "Подать жалобу"
     },
-    "Options.Create": "Подать жалобу",
     "Title": "Жалобы"
 }
