--- a/src/Assets/Control/Locale/ru/Options.json
+++ b/src/Assets/Control/Locale/ru/Options.json
@@ -1,5 +1,6 @@
 {
-    "Do": "Список",
+    "Do": "Обзор",
+    "List": "Список",
     "Create": "Создать страницу",
     "Show": "Просмотреть",
     "Update": "Редактировать",
