--- a/src/Assets/Country/Locale/ru/Control.json
+++ b/src/Assets/Country/Locale/ru/Control.json
@@ -2,7 +2,8 @@
     "Title": "Страны",
     "Options": {
         "Create": "Создать страну",
-        "Do": "Список стран",
+        "Do": "Обзор",
+        "List": "Список стран",
         "Show": "Просмотреть",
         "Update": "Редактировать",
         "Delete": "Удалить",
