--- a/src/Assets/Invite/Locale/ru/Control.json
+++ b/src/Assets/Invite/Locale/ru/Control.json
@@ -2,7 +2,8 @@
     "Title": "Инвайты",
     "Options":
     {
-        "Do": "Список инвайтов",
+        "Do": "Обзор",
+        "List": "Список инвайтов",
         "Create": "Создать инвайт"
     }
 }
