--- a/src/Assets/Page/Locale/ru/Control.json
+++ b/src/Assets/Page/Locale/ru/Control.json
@@ -2,7 +2,8 @@
     "Title": "Страницы",
     "Options":
     {
-        "Do": "Список",
+        "Do": "Обзор",
+        "List": "Список страниц",
         "Create": "Создать страницу",
         "Show": "Просмотреть",
         "Update": "Редактировать",
