--- a/src/Assets/Photo/Locale/ru/Control.json
+++ b/src/Assets/Photo/Locale/ru/Control.json
@@ -2,6 +2,7 @@
     "Title": "Фото",
     "Options":
     {
-        "Do": "Список"
+        "Do": "Обзор",
+        "List": "Список фотографий"
     }
 }
