--- a/src/Assets/Session/Locale/ru/Control.json
+++ b/src/Assets/Session/Locale/ru/Control.json
@@ -1,11 +1,12 @@
 {
-    "Title": "Сессии",
-    "Actions": "Действия",
     "Annulate": "Аннулировать",
-    "Options":
-    {
-        "Do": "Список сессий",
-        "Delete": "Удалить",
-        "Truncate": "Очистить устаревшие"
-    }
+    "Options": {
+        "Do": "Обзор",
+        "List": "Список сессий",
+        "Delete": "Очистить",
+        "Truncate": "Удалить устаревшие"
+    },
+    "Title": "Сессии",
+    "Today": "Сегодня",
+    "Total": "Всего"
 }
