--- a/src/Assets/Session/Locale/ru/Entity.json
+++ b/src/Assets/Session/Locale/ru/Entity.json
@@ -1,9 +1,10 @@
 {
-    "ID": "ID",
+    "Channel": "Канал",
     "Created": "Создана",
-    "User": "Пользователь",
+    "Empty": "Сессий нет",
     "Expire": "Срок действия",
-    "IP": "IP",
     "Heartbeat": "Активность",
-    "Empty": "Сессий нет"
+    "ID": "ID",
+    "IP": "IP",
+    "User": "Пользователь"
 }
