--- a/src/Assets/User/Locale/ru/Control.json
+++ b/src/Assets/User/Locale/ru/Control.json
@@ -2,7 +2,8 @@
     "Title": "Пользователи",
     "Options":
     {
-        "Do": "Список",
+        "Do": "Обзор",
+        "List": "Список пользователей",
         "Create": "Создать",
         "Update": "Изменить",
         "Delete": "Удалить",
