--- a/src/Assets/Blog/Locale/ru/Entity.json
+++ b/src/Assets/Blog/Locale/ru/Entity.json
@@ -4,6 +4,7 @@
     "Category": "Рубрика",
     "Description": "Описание",
     "Empty": "Блог пуст",
+    "Entity": "Блог",
     "Published": "Опубликовать",
     "Redirect": "Редирект",
     "SEO": {
