--- a/src/Assets/IO/Locale/ru/Control.json
+++ b/src/Assets/IO/Locale/ru/Control.json
@@ -2,7 +2,7 @@
     "Title": "IO",
     "Options":
     {
-        "Do": "Дашборд",
+        "Do": "Обзор",
         "Storages": "Хранилища"
     }
 }
