--- a/src/Assets/Invoice/Locale/ru/Control.json
+++ b/src/Assets/Invoice/Locale/ru/Control.json
@@ -1,7 +1,7 @@
 {
     "Options": {
         "Create": "Создать счёт",
-        "Do": "Дашборд",
+        "Do": "Обзор",
         "Show": "Просмотреть счёт"
     },
     "Title": "Счета"
