--- a/src/Assets/PHP/Locale/ru/Control.json
+++ b/src/Assets/PHP/Locale/ru/Control.json
@@ -4,7 +4,7 @@
     {
         "Extensions": "Расширения",
         "Settings": "Настройки",
-        "Do": "Дашборд"
+        "Do": "Обзор"
     },
     "Extension": {
         "Core": "Ядро"
