--- a/src/Assets/Security/Locale/ru/Control.json
+++ b/src/Assets/Security/Locale/ru/Control.json
@@ -2,7 +2,7 @@
     "Title": "Безопасность",
     "Options":
     {
-        "Do": "Дашборд",
+        "Do": "Обзор",
         "HashTest": "Тест хэширования",
         "EntropyTest": "Тест ГСЧ",
         "Rules": "Правила доступа"
