--- a/src/Assets/Codeine/Locale/ru/Control.json
+++ b/src/Assets/Codeine/Locale/ru/Control.json
@@ -2,7 +2,7 @@
     "Title": "Codeine",
     "Options":
     {
-        "Do": "Дашборд",
+        "Do": "Обзор",
         "Version": "Версия"
     },
     "Version":
