--- a/src/Assets/Company/Locale/ru/Control.json
+++ b/src/Assets/Company/Locale/ru/Control.json
@@ -1,6 +1,6 @@
 {
     "Options": {
-        "Do": "Дашборд",
+        "Do": "Обзор",
         "Show": "Просмотр компании",
         "Update": "Редактировать компанию",
         "RAW": "RAW View"
