--- a/src/Assets/Complain/Locale/ru/Control.json
+++ b/src/Assets/Complain/Locale/ru/Control.json
@@ -2,7 +2,7 @@
     "Options":
     {
         "Do": "Обзор",
-        "List": "Список жалоб"
+        "List": "Список жалоб",
         "Create": "Подать жалобу"
     },
     "Title": "Жалобы"
