--- a/src/Assets/Server/Locale/ru/Control.json
+++ b/src/Assets/Server/Locale/ru/Control.json
@@ -2,7 +2,7 @@
     "Title": "Сервер",
     "Options":
     {
-        "Do": "Дашборд",
+        "Do": "Обзор",
         "Benchmark": "Бенчмарк"
     },
     "System": "Система",
