--- a/src/Assets/Blog/Locale/ru/Entity.json
+++ b/src/Assets/Blog/Locale/ru/Entity.json
@@ -16,5 +16,6 @@
     "Source": "Источник",
     "Tag": "Тег",
     "Tags": "Теги",
-    "Title": "Заголовок"
+    "Title": "Заголовок",
+    "Subtitle": "Подзаголовок"
 }
