--- a/src/Assets/Blog/Locale/en/Entity.json
+++ b/src/Assets/Blog/Locale/en/Entity.json
@@ -1,6 +1,6 @@
 {
     "Body": "Body",
-    "Category": "Category",
+    "Tags": "Tags",
     "Description": "Description",
     "Published": "Publish on date",
     "Redirect": "Redirect",
