--- a/src/Assets/Blog/Locale/ru/Catalog.json
+++ b/src/Assets/Blog/Locale/ru/Catalog.json
@@ -1,6 +1,6 @@
 {
     "Header": {
-        "Category": "Рубрики",
+        "Tags": "Рубрики",
         "User": "Авторы",
         "Tags": "Теги"
     }
