--- a/src/Assets/Blog/Locale/ru/Entity.json
+++ b/src/Assets/Blog/Locale/ru/Entity.json
@@ -1,7 +1,7 @@
 {
     "AgeLimit": "Возрастное ограничение",
     "Body": "Текст",
-    "Category": "Рубрика",
+    "Tags": "Рубрика",
     "Description": "Описание",
     "Empty": "Блог пуст",
     "Entity": "Блог",
