--- a/src/Assets/Server/Locale/ru/Control.json
+++ b/src/Assets/Server/Locale/ru/Control.json
@@ -3,7 +3,8 @@
     "Options":
     {
         "Do": "Обзор",
-        "Benchmark": "Бенчмарк"
+        "Benchmark": "Бенчмарк",
+        "Environment": "Окружение"
     },
     "System": "Система",
     "CPU": "Процессоры"
