--- a/src/Assets/User/Locale/ru/Control.json
+++ b/src/Assets/User/Locale/ru/Control.json
@@ -1,15 +1,15 @@
 {
     "Title": "Пользователи",
-    "Options":
-    {
+    "Options": {
         "Do": "Обзор",
-        "List": "Список пользователей",
         "Create": "Создать",
         "Update": "Изменить",
         "Delete": "Удалить",
         "Show": "Просмотреть",
         "Login": "Войти",
         "Passwd": "Сменить пароль",
-        "RAW": "Просмотреть в сыром виде"
+        "RAW": "Просмотреть в сыром виде",
+        "Password": "Сменить пароль",
+        "Correct": "Исправить"
     }
 }
