--- a/src/Assets/User/Locale/ru/Control.json
+++ b/src/Assets/User/Locale/ru/Control.json
@@ -1,6 +1,7 @@
 {
     "Title": "Пользователи",
-    "Options": {
+    "Options":
+    {
         "Do": "Обзор",
         "Create": "Создать",
         "Update": "Изменить",
