--- a/src/Assets/User/Locale/ru/Control.json
+++ b/src/Assets/User/Locale/ru/Control.json
@@ -3,6 +3,7 @@
     "Options":
     {
         "Do": "Обзор",
+        "List": "Список пользователей",
         "Create": "Создать",
         "Update": "Изменить",
         "Delete": "Удалить",
