--- a/src/Assets/User/Locale/ru/Control.json
+++ b/src/Assets/User/Locale/ru/Control.json
@@ -1,5 +1,7 @@
 {
     "Title": "Пользователи",
+    "Total": "Всего",
+    "Today": "Регистраций сегодня",
     "Options":
     {
         "Do": "Обзор",
