--- a/src/Assets/Company/Locale/ru/Entity.json
+++ b/src/Assets/Company/Locale/ru/Entity.json
@@ -1,7 +1,6 @@
 {
     "Company": {
         "Type": {
-            "Label": "Организационно-правовая форма",
             "IE": "Индивидуальный предприниматель",
             "LLC": "Общество с ограниченной ответственностью",
             "CJSC": "Закрытое акционерное общество",
@@ -19,13 +18,20 @@
         "KPP": "КПП",
         "Director": {
             "Label": "Единоличный исполнительный орган",
-            "Name": "Имя единоличного исполнительного органа",
-            "Position": "Должность единоличного исполнительного органа"
+            "Name": "Имя ЕИО",
+            "Position": "Должность ЕИО",
+            "Reason": "Основание полномочий ЕИО",
+            "Genitive": {
+                "Name": "Имя ЕИО в родительном падеже",
+                "Position": "Должность ЕИО в родительном падеже",
+                "Reason": "Основание полномочий ЕИО в родительном падеже"
+            }
         },
         "Accountant": "Главный бухгалтер",
         "Address": {
             "Official": "Юридический адрес",
-            "Real": "Фактический адрес"
+            "Real": "Фактический адрес",
+            "Postal": "Почтовый адрес"
         },
         "Industry": "Виды деятельности",
         "Taxes": {
@@ -48,16 +54,25 @@
         "Since": "Основана",
         "Label": "Юридическая информация"
     },
+    "Company.Type.Label": "Организационно-правовая форма",
     "EMail": "Электронная почта",
+    "Entity": "Компания",
+    "Logo": "Логотип",
     "Mission": "Миссия",
-    "Tagline": "Одной строкой",
-    "Powerpoints": "Преимущества",
     "Phone": "Контактный телефон",
+    "Pricing": "Ценообразование",
     "SEO": {
         "Description": "SEO Описание",
         "Keywords": "SEO Ключевые слова",
         "Title": "SEO Заголовок"
     },
-    "Slug": "ЧПУ\\",
+    "Slug": "ЧПУ",
+    "Social": {
+        "Facebook": "Facebook",
+        "Twitter": "Twitter",
+        "VK": "VK",
+        "Google": "Google",
+        "Tumblr": "Tumblr"
+    },
     "Title": "Публичное название"
 }
