New Auth System

--- a/src/Assets/Company/Locale/ru/Entity.json
+++ b/src/Assets/Company/Locale/ru/Entity.json
@@ -70,7 +70,7 @@
     "Social": {
         "Facebook": "Facebook",
         "Twitter": "Twitter",
-        "VK": "VK",
+        "VKontakte": "VKontakte",
         "Google": "Google",
         "Tumblr": "Tumblr"
     },
