--- a/src/Assets/User/Locale/ru/Entity.json
+++ b/src/Assets/User/Locale/ru/Entity.json
@@ -20,6 +20,7 @@
     "Age": "Возраст",
     "Invite": "Инвайт",
     "Empty": "Пользователей нет",
+    "Editor": "Редактор",
     "Created": "Зарегистрировался",
     "Password":
     {
