--- a/src/Assets/Article/Locale/ru/Control.json
+++ b/src/Assets/Article/Locale/ru/Control.json
@@ -5,9 +5,11 @@
         "Do": "Обзор",
         "List": "Список статей",
         "Create": "Создать статью",
-        "Order": "Заказать статью",
         "Show": "Просмотреть",
         "Update": "Редактировать",
-        "Delete": "Удалить"
-    }
+        "Delete": "Удалить",
+        "Order": "Заказать"
+    },
+    "Today": "Статей сегодня",
+    "Total": "Всего статей"
 }
