--- a/src/Assets/Article/Locale/ru/Entity.json
+++ b/src/Assets/Article/Locale/ru/Entity.json
@@ -6,5 +6,10 @@
     "Keywords": "Ключевые слова",
     "Description": "Описание",
     "Category": "Рубрика",
-    "Empty": "Статей нет"
+    "Empty": "Статей нет",
+    "SEO": {
+        "Keywords": "Ключевые слова",
+        "Title": "SEO Заголовок",
+        "Description": "SEO Описание"
+    }
 }
