Unique Tags and Article update

--- a/src/Assets/Article/Locale/ru/Catalog.json
+++ b/src/Assets/Article/Locale/ru/Catalog.json
@@ -1,7 +1,7 @@
 {
     "Header":
     {
-        "Category": "Рубрики",
-        "User": "Авторы"
+        "User": "Статьи по авторам",
+        "Tags": "Статьи по тегам"
     }
 }
