--- a/src/Assets/Article/Locale/ru/Entity.json
+++ b/src/Assets/Article/Locale/ru/Entity.json
@@ -5,7 +5,7 @@
     "Slug": "ЧПУ",
     "Keywords": "Ключевые слова",
     "Description": "Описание",
-    "Category": "Рубрика",
+    "Tags": "Теги",
     "Empty": "Статей нет",
     "SEO": {
         "Keywords": "Ключевые слова",
