--- a/src/Assets/Company/Locale/ru/Entity.json
+++ b/src/Assets/Company/Locale/ru/Entity.json
@@ -58,7 +58,7 @@
     "EMail": "Электронная почта",
     "Entity": "Компания",
     "Logo": "Логотип",
-    "Mission": "Миссия",
+    "Mission": "Наша миссия",
     "Phone": "Контактный телефон",
     "Pricing": "Ценообразование",
     "SEO": {
